# insights-puptoo

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.upstream  Jenkinsfile-smoke.groovy  Makefile  Pipfile  README.md  app.py  artifacts.lock.yaml  build_deploy.sh  build_trigger  config.py  consumer.py  deployment.yaml  parse_json.py  pr_check.sh  pr_check_local_iqe.sh  process.py  producer.py  puptoo_logging.py  py-pkg-deps-bump-up.sh  py-pkg-deps-in-container.sh  pyproject.toml  rebuild-hermetic.sh  renovate.json  requirements-build.in  requirements-build.txt  requirements-dev.txt  requirements-extras.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml  run.sh  run_cji_with_local_plugin.sh  sequence.puml  setup.py  tracker.py  (+1 more)
.github/workflows/: container-publish.yaml  integrate.yaml  renovate-validator.yaml
.hermetic_builds/: README.md  add_manual_build_dependencies.sh  generate_requirements_build.sh  prep_python_build_container_dependencies.sh
.otel/: grafana-datasources.yaml
.tekton/: insights-puptoo-pull-request.yaml  insights-puptoo-push.yaml  iop-puptoo-sat-6-18-pull-request.yaml  iop-puptoo-sat-6-18-push.yaml  iop-puptoo-sat-6-19-pull-request.yaml  iop-puptoo-sat-6-19-push.yaml  puptoo-sc-pull-request.yaml  puptoo-sc-push.yaml
.unleash/: flags.json
dashboards/: grafana-dashboard-insights-puptoo-general.configmap.yaml
dev/: .env  README.md  build-images.sh  cdappconfig.json  docker-compose.yml  full-stack-mac.yml  full-stack.yml  openshift.yml  parse_json.py  s2i.sh  test-producer-job.yml  test-stack.yml
dev/io_test/consumer/: Dockerfile  consumer.py  requirements.txt
dev/io_test/producer/: Dockerfile  producer.py  requirements.txt
dev/test-archives/core-archive-2/: version_info
dev/test-archives/core-archive-2/meta_data/: insights.specs.Specs.abrt_ccpp_conf.json  insights.specs.Specs.auditd_conf.json  insights.specs.Specs.avc_cache_threshold.json  insights.specs.Specs.avc_hash_stats.json  insights.specs.Specs.boot_loader_entries.json  insights.specs.Specs.certificates_enddate.json  insights.specs.Specs.cgroups.json  insights.specs.Specs.chkconfig.json  insights.specs.Specs.chronyc_sources.json  insights.specs.Specs.cpu_cores.json  insights.specs.Specs.cpu_siblings.json  insights.specs.Specs.cpu_smt_active.json  insights.specs.Specs.cpu_vulns.json  insights.specs.Specs.df__li.json  insights.specs.Specs.dig_dnssec.json  insights.specs.Specs.dig_edns.json  insights.specs.Specs.dmesg.json  insights.specs.Specs.dmsetup_info.json  insights.specs.Specs.ethernet_interfaces.json  insights.specs.Specs.ethtool_S.json  insights.specs.Specs.ethtool_c.json  insights.specs.Specs.ethtool_g.json  insights.specs.Specs.fcoeadm_i.json  insights.specs.Specs.findmnt_lo_propagation.json  insights.specs.Specs.getconf_page_size.json  insights.specs.Specs.grub1_config_perms.json  insights.specs.Specs.grub2_cfg.json  insights.specs.Specs.grubby_default_index.json  insights.specs.Specs.hostname.json  insights.specs.Specs.hosts.json  insights.specs.Specs.httpd_conf.json  insights.specs.Specs.interrupts.json  insights.specs.Specs.ip6tables.json  insights.specs.Specs.ip_addresses.json  insights.specs.Specs.ipcs_m_p.json  insights.specs.Specs.ipv6_neigh.json  insights.specs.Specs.kexec_crash_size.json  insights.specs.Specs.kpatch_list.json  insights.specs.Specs.libssh_client_config.json  insights.specs.Specs.limits_conf.json  (+73 more)
dev/test-archives/core-archive/meta_data/: insights.specs.Specs.audit_log.json  insights.specs.Specs.auditctl_status.json  insights.specs.Specs.bios_uuid.json  insights.specs.Specs.blkid.json  insights.specs.Specs.chrony_conf.json  insights.specs.Specs.cmdline.json  insights.specs.Specs.cpupower_frequency_info.json  insights.specs.Specs.cpuset_cpus.json  insights.specs.Specs.crypto_policies_bind.json  insights.specs.Specs.crypto_policies_config.json  insights.specs.Specs.crypto_policies_opensshserver.json  insights.specs.Specs.crypto_policies_state_current.json  (+111 more)
dev/test-archives/core-base/: ansible_host  branch_info
docs/: IQE.md
iqe-insights-upload-processor/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  README.md  pyproject.toml
iqe-insights-upload-processor/iqe_puptoo/: __init__.py  deprecations.py  pytest_plugin.py
iqe-insights-upload-processor/iqe_puptoo/conf/: puptoo.default.yaml  requirements.yaml
iqe-insights-upload-processor/iqe_puptoo/resources/data/: system_profile.json
iqe-insights-upload-processor/iqe_puptoo/tests/: conftest.py  test_archive_process.py  test_plugin.py
iqe-insights-upload-processor/iqe_puptoo/tests/cases/: test_installed_products.py  test_systemctl_status.py
iqe-insights-upload-processor/iqe_puptoo/utils/: __init__.py  archive_utils.py
mq/: consume.py  msgs.py  produce.py
src/puptoo/: app.py  exceptions.py  feature_flags.py  process.py  telemetry.py  upload.py
src/puptoo/handlers/: __init__.py  advisor.py  base.py  compliance.py
src/puptoo/mq/: auth.py  consume.py  msgs.py  produce.py
src/puptoo/process/: __init__.py  profile.py
src/puptoo/utils/: config.py  metrics.py  puptoo_logging.py  validators.py
tests/: conftest.py  test_ansible_host.py  test_ansible_info.py  test_app.py  test_aws_instance_id.py  test_aws_public_dns.py  test_aws_public_ipv4_addresses.py  test_azure_instance_plan.py  test_azure_is_marketplace.py  test_azure_public_ipv4_addresses.py  test_bootc_status.py  test_branch_info.py  test_canonical_facts.py  test_clean_macs.py  test_cpuinfo.py  test_crowdstrike.py  test_db_workloads.py  test_display_name.py  test_dmidecode.py  test_dnf_module_list.py  test_exceptions.py  test_feature_flags.py  test_gcp_license_codes.py  test_gcp_network_interfaces.py  test_greenboot_status.py  test_handlers.py  test_host_type.py  test_image_builder_facts.py  test_installed_products.py  test_installed_rpms.py  test_intersystems.py  test_lscpu.py  test_mq_auth.py  test_msgs.py  test_mssql_info.py  test_os_release.py  test_os_version.py  test_produce.py  test_profile.py  test_profile_helpers.py  (+16 more)
utils/: config.py  metrics.py  puptoo_logging.py
(+280 files in other folders)
