[tool.poetry]
name = "insights-puptoo"
version = "0.1.0"
description = "Platform Upload PreProcessor II"
authors = ["Stephen Adams <sadams@redhat.com>"]
packages = [
    { include = "src/puptoo" }
]

[tool.poetry.dependencies]
python = "~3.11"
prometheus-client = "^0.23.0"
requests = "^2.32.4"
confluent-kafka = "^2.8.2"
insights-core = "3.6.9"
app-common-python = "0.2.8"
watchtower = "^3.4.0"
logstash_formatter = "^0.5.17"
minio = "^7.2.15"
urllib3 = "^2.5.0"
setuptools = "^80.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"
freezegun = "^1.5.1"
jsonschema = "^4.23.0"

[tool.poetry.scripts]
puptoo = 'src.puptoo.app:main'
puptoo-run = 'src.puptoo.process.profile:run_profile'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
