[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dynamic = ["version"]
keywords = ["pytest", "plugin", "iqe"]
maintainers = [
    { name = "Kunxin Huang", email = "kuhuang@redhat.com" }
]
name = "iqe-puptoo-plugin"
readme = "README.md"
dependencies = [
    "iqe-core",
    "iqe-bindings",
    "pytest-lazy-fixtures",
    "wait_for"
]

[project.entry-points."iqe.application_plugins"]
"puptoo" = "iqe_puptoo:ApplicationPuptoo"

[project.entry-points.pytest11]
"iqe_puptoo_plugin" = "iqe_puptoo.pytest_plugin"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
# plugin and API directories must be part of package.
packages = ["iqe_puptoo"]

[tool.hatch.version]
raw-options.version_scheme = "calver-by-date"
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["D", "F", "I", "UP", "RUF"]
extend-ignore = [
  # missing docstring rules - not enforced project-wide
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
]
extend-safe-fixes = [
  "UP030",
  "UP031",
  "UP032",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "wait_for",
    "iqe.*",
    "iqe_bindings.*",
    "pytest_lazy_fixtures.*",
]
ignore_missing_imports = true
